# Gimli

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
gimli/: CMakeLists.txt
gimli/include/: cli.h  gimli_directory.h  gimli_directory_accessor.h  io.h  layer.h  layer_store.h
gimli/include/gimli/: cli.h  image.h  image_store.h  io.h  layer.h  layer_store.h  uuid.h
gimli/src/: cli.c  gimli_directory.c  gimli_directory_accessor.c  image.c  image_store.c  io.c  layer.c  layer_store.c  main.c  uuid.c
src/: main.c
